Adding patched for Launcher/Vesta

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -690,3 +690,78 @@
 		defaultScale = 0.3125
 	}
 }
+
+
+// ** Vesta *
+
+@PART[_Knes_Vesta_Adapter_0625to03125]:NEEDS[TweakScale]:FOR[Knes] // LRBA-V "FoxHole" Adapter 0.625 to 0.3125
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Vesta_Aileron]:NEEDS[TweakScale]:FOR[Knes] // LRBA-F "Weak" Fin
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+	}
+}
+
+@PART[_Knes_Vesta_AirBrake]:NEEDS[TweakScale]:FOR[Knes] // LRBA-A "Resolute" Airbrake
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+	}
+}
+
+@PART[_Knes_Vesta_Avionic_03125]:NEEDS[TweakScale]:FOR[Knes] // LRBA-P "Valiant" Probe Nose Cone
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.3125
+	}
+}
+
+@PART[_Knes_Vesta_CatPod_03125]:NEEDS[TweakScale]:FOR[Knes] // LRBA-P "CosmoCat" Science Pod
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.3125
+	}
+}
+
+@PART[_Knes_Vesta_Engine_0625]:NEEDS[TweakScale]:FOR[Knes] // LRBA-V "Gauntness" Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[_Knes_Vesta_FuelTank_0625_3125]:NEEDS[TweakScale]:FOR[Knes] // LRBA-FT "Hunger" Fuel Tank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.3125
+	}
+}
+
+@PART[_Knes_Vesta_Parachute_03125]:NEEDS[TweakScale]:FOR[Knes] // LRBA-C "Feeble" Parachute
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 0.3125
+	}
+}
