Adding patched for Launcher/Vulcain

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -765,3 +765,146 @@
 		defaultScale = 0.3125
 	}
 }
+
+
+// ** Vulcain *
+
+@PART[_Knes_Carmen_FuelTank_125]:NEEDS[TweakScale]:FOR[Knes] // MLF-12 "Calypso" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Carmen_FuelTank_Extended_125]:NEEDS[TweakScale]:FOR[Knes] // MLF-24 "Carissa" Extended FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[Knes_Catherine_Adapter_Quad_1875]:NEEDS[TweakScale]:FOR[Knes] // MR-24 "Gothic" Stack Quad-Coupler
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[Knes_Catherine_Adapter_Quad_250]:NEEDS[TweakScale]:FOR[Knes] // MR-250 "Dark" Stack Quad-Coupler
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Catherine_Stage_1875]:NEEDS[TweakScale]:FOR[Knes] // Heracles "Arcas" Stage
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[_Knes_Cora_Adapter_125_09375]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-09375 "Both"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Cora_Adapter_1875_125]:NEEDS[TweakScale]:FOR[Knes] // Adapter K-125 "Kiss"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_Cora_Engine_1]:NEEDS[TweakScale]:FOR[Knes] // C-R12 "Penelope" Rocket Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Cora_Engine_SL]:NEEDS[TweakScale]:FOR[Knes] // C-SL12 "Penelope" Rocket Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Coralie_LFO_125]:NEEDS[TweakScale]:FOR[Knes] // C-H125 FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Diane_Engine_125]:NEEDS[TweakScale]:FOR[Knes] // M-R12 "Calypso" Rocket Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Mireille_Engine_09375]:NEEDS[TweakScale]:FOR[Knes] // M-R6 "Mirabelle" Rocket Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
+
+@PART[_Knes_Mireille_LFO_long_09375]:NEEDS[TweakScale]:FOR[Knes] // M-09 "Mirabelle" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Mireille_LFO_medium_09375]:NEEDS[TweakScale]:FOR[Knes] // M-09 "Myrtille" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_Mireille_LFO_short_09375]:NEEDS[TweakScale]:FOR[Knes] // M-09 "Cassis" FuelTank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
