Hatch & small cargo

--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
@@ -1,53 +1,53 @@
 PART
 {
-	name = _Knes_STEAM_Cargo_Tank
+	name = _Knes_STEAM_125_cargo
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/ATV/STEAM_Cargo_Tank
+		model = Knes/Parts/ATV/STEAM_125_cargo
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
 		scale = 1.0, 1.0, 1.0
-		position = 0.0, 0.65625, 0.0
+		position = 0.0, 0.5, 0.0
 	}
 	MODEL
 	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
 		scale = 1.0, -1.0, 1.0
-		position = 0.0, -0.65625, 0.0
+		position = 0.0, -0.5, 0.0
 	}
 	rescaleFactor = 1
 	
-	node_stack_top = 0.0, 0.65625, 0.0, 0, 1, 0, 1
-	node_stack_bottom = 0.0, -0.65625, 0.0, 0, -1, 0, 1	
-
+	node_stack_top = 0.0, 0.5, 0.0, 0, 1, 0, 0
+	node_stack_bottom = 0.0, -0.5, 0.0, 0, -1, 0, 0	
+	node_attach = 0.0, 0.0, 0.625, 0.0, 0.0, -1.0
 		
 	TechRequired = commandModules
 	entryCost = 1500
-	cost = 950
+	cost = 250
 	category = Propulsion
 	subcategory = 0
-	title = STEAM "Blamont" Pressurised Module
+	title = Small "MiraGino" Pressurised Module
 	manufacturer = Knes
-	description = ATV Pressurised Module can deliver dry cargo, water, compressed gases and propellant to a space station.
-	attachRules = 1,0,1,1,0
+	description = The small "MiraGino" Pressurised Module can deliver dry cargo, water, compressed gases and propellant to a space station.
+	attachRules = 1,1,1,1,0
 	stackSymmetry = 1
 
 	// --- Std Parameters ---
-	mass = 1
+	mass = 0.5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1400
-	bulkheadProfiles = size2
-	tags =  ATV Knes
-
+	bulkheadProfiles = size1
+	tags =  MiraGino Cargo KIS Knes	
+	
     MODULE
     {
         name = ModuleColorChanger
@@ -89,9 +89,9 @@ PART
 
 	RESOURCE
 	{
-		name = MonoPropellant
-		amount = 800
-		maxAmount = 800
+		name = Ore
+		amount = 0
+		maxAmount = 150
 	}
 
 }
