--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Hatch.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Hatch.cfg
@@ -1,53 +1,54 @@
 PART
 {
-	name = _Knes_STEAM_Cargo_Tank
+	name = _Knes_STEAM_Hatch
 	module = Part
 	author = Well
 	
 	MODEL
 	{
-		model = Knes/Parts/ATV/STEAM_Cargo_Tank
+		model = Knes/Parts/ATV/STEAM_Hatch
 	}
     MODEL
 	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s0
 		scale = 1.0, 1.0, 1.0
-		position = 0.0, 0.65625, 0.0
+		position = 0.0, 0.690239, 0.0
 	}
 	MODEL
 	{
-		model = Knes/Parts/Core/EndCap/Knes_end_crew_s2_2
+		model = Knes/Parts/Core/EndCap/Knes_end_crew_s1
 		scale = 1.0, -1.0, 1.0
-		position = 0.0, -0.65625, 0.0
+		position = 0.0, -0.579614, 0.0
 	}
 	rescaleFactor = 1
 	
-	node_stack_top = 0.0, 0.65625, 0.0, 0, 1, 0, 1
-	node_stack_bottom = 0.0, -0.65625, 0.0, 0, -1, 0, 1	
-
+	node_stack_top = 0.0, 0.690239, 0.0, 0, 1, 0, 0
+	node_stack_bottom = 0.0, -0.579614, 0.0, 0, -1, 0, 1	
+	node_attach = 0.0, 0.0, 0.625, 0.0, 0.0, -1.0
 		
 	TechRequired = commandModules
 	entryCost = 1500
-	cost = 950
-	category = Propulsion
+	cost = 250
+	category = Utility
 	subcategory = 0
-	title = STEAM "Blamont" Pressurised Module
+	title = Hatch "Ivalice" Module EVA
 	manufacturer = Knes
-	description = ATV Pressurised Module can deliver dry cargo, water, compressed gases and propellant to a space station.
-	attachRules = 1,0,1,1,0
+	description = The Hatch "Ivalice" is a little Module for EVA.
+	attachRules = 1,1,1,1,0
 	stackSymmetry = 1
 
 	// --- Std Parameters ---
-	mass = 1
+	mass = 0.8
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 10
 	maxTemp = 1400
-	bulkheadProfiles = size2
-	tags =  ATV Knes
-
+	bulkheadProfiles = size1
+	tags =  MiraGino Cargo KIS Knes	
+	CrewCapacity = 1
+	
     MODULE
     {
         name = ModuleColorChanger
@@ -85,13 +86,5 @@ PART
         }
     }
 	
-	// --- Resources ---
-
-	RESOURCE
-	{
-		name = MonoPropellant
-		amount = 800
-		maxAmount = 800
-	}
 
 }
