--- a/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
+++ b/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
@@ -90,6 +90,44 @@
 		}
 
 	}
+	@PART[_Knes_STEAM_125_cargo]:NEEDS[KIS]
+	{
+		%MODULE[ModuleKISInventory]	
+		{
+			name = ModuleKISInventory
+			maxVolume = 800
+			externalAccess = true
+			internalAccess = true
+			slotsX = 4
+			slotsY = 4
+			slotSize = 50
+			itemIconResolution = 128
+			selfIconResolution = 128
+			openSndPath = KIS/Sounds/containerOpen
+			closeSndPath = KIS/Sounds/containerClose
+			defaultMoveSndPath = KIS/Sounds/itemMove
+		}
+
+	}
+	@PART[_Knes_STEAM_Hatch]:NEEDS[KIS]
+	{
+		%MODULE[ModuleKISInventory]	
+		{
+			name = ModuleKISInventory
+			maxVolume = 400
+			externalAccess = true
+			internalAccess = true
+			slotsX = 4
+			slotsY = 4
+			slotSize = 50
+			itemIconResolution = 128
+			selfIconResolution = 128
+			openSndPath = KIS/Sounds/containerOpen
+			closeSndPath = KIS/Sounds/containerClose
+			defaultMoveSndPath = KIS/Sounds/itemMove
+		}
+
+	}	
 	@PART[_Knes_ATV_Cargo]:NEEDS[KIS]
 	{
 		%MODULE[ModuleKISInventory]	
