Okey, there's no deprecated parts on this! :)

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Legacy_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Legacy_TweakScale.cfg
@@ -14,21 +14,4 @@
 // ** Knes :: Legacy **
 //
 
-@PART[Knes_Command_Minus]:NEEDS[TweakScale]:FOR[Knes]
-{
-	%MODULE[TweakScale]
-	{
-		defaultScale = 1.875
-		type = stack
-	}
-}
-
-@PART[Knes_Fuel_Tanks_1875_H10]:NEEDS[TweakScale]:FOR[Knes]
-{
-	%MODULE[TweakScale]
-	{
-		defaultScale = 1.875
-		type = stack
-	}
-}
-
+// Place holder - this will be filled up as parts are deprecated.
