Adding support for TweakScale on new parts as 2020-0626

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
@@ -86,6 +86,24 @@
 	}
 }
 
+@PART[_Knes_STEAM_125_Cargo]:NEEDS[TweakScale]:FOR[Knes] // Small "MiraGino" Pressurised Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_STEAM_Hatch]:NEEDS[TweakScale]:FOR[Knes] // Hatch "Ivalice" Module EVA
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
 @PART[_Knes_STEAM_ScienceLab]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Calypso" ScienceLab Module
 {
 	%MODULE[TweakScale]
