--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Node.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Node.cfg
@@ -65,7 +65,7 @@ PART
 	TechRequired = advExploration
 	entryCost = 10400
 	cost = 4000
-	category = Science
+	category = Utility
 	subcategory = 0
 	title = STEAM "Caravelle" Node Module
 	manufacturer = Knes
@@ -90,71 +90,7 @@ PART
 	{
 		name = crewCabinInternals
 	}
-	MODULE
-	{
-		name = ModuleScienceContainer
-		reviewActionName = #autoLOC_502204 //#autoLOC_502204 = Review Data
-		storeActionName = #autoLOC_502202 //#autoLOC_502202 = Store Experiments
-		collectActionName = #autoLOC_238018 //#autoLOC_238018 = Take Data
-		evaOnlyStorage = True
-		storageRange = 2
-		allowRepeatedSubjects = True
-	}
-	MODULE
-	{
-		name = ModuleScienceLab
-		containerModuleIndex = 0
-		dataStorage = 750
-		crewsRequired = 1
-		canResetConnectedModules = True
-		canResetNearbyModules = True
-		interactionRange = 5
-		SurfaceBonus = 0.1
-		ContextBonus = 0.25
-		homeworldMultiplier = 0.1
-		RESOURCE_PROCESS
-		{
-			name = ElectricCharge
-			amount = 10
-		}
-	}
 
-	MODULE
-	{
-		name = ModuleScienceConverter
-		dataProcessingMultiplier = 0.5 // Multiplier to data processing rate and therefore science rate
-		scientistBonus = 0.25	//Bonus per scientist star - need at least one! So 0.25x - 2.5x 
-		researchTime = 7	    //Larger = slower.  Exponential!
-		scienceMultiplier = 5	//How much science does data turn into?
-		scienceCap = 500	    //How much science can we store before having to transmit?		
-		powerRequirement = 5	//EC/Sec to research
-		ConverterName = #autoLOC_502055 //#autoLOC_502055 = Research
-		StartActionName = #autoLOC_502056 //#autoLOC_502056 = Start Research
-		StopActionName = #autoLOC_502057 //#autoLOC_502057 = Stop Research
-	}
-
-	MODULE
-	{
-		name = ModuleKerbNetAccess
-		MinimumFoV = 17
-		MaximumFoV = 63
-		AnomalyDetection = 0
-		DISPLAY_MODES
-		{
-			Mode = Terrain,#autoLOC_438839 //#autoLOC_438839 = Terrain
-			Mode = Biome,#autoLOC_438890 //#autoLOC_438890 = Biome
-		}
-		REQUIRED_EFFECTS
-		{
-			Effect = ScienceSkill
-		}
-	}
-
-	MODULE
-	{
-        	name = ModuleExperienceManagement
-        	costPerKerbal = 0
-	}	
     MODULE
     {
         name = ModuleColorChanger
