Station parts IVA

--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
@@ -48,11 +48,11 @@ PART
 	bulkheadProfiles = size2
 	tags =  ATV Knes
 	vesselType = Ship
-	CrewCapacity = 4	
+	CrewCapacity = 2	
 	
 	INTERNAL
 	{
-		name = crewCabinInternals
+		name = ATV_IVA
 	}
     MODULE
     {
