--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Hatch.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Hatch.cfg
@@ -47,7 +47,12 @@ PART
 	maxTemp = 1400
 	bulkheadProfiles = size1
 	tags =  MiraGino Cargo KIS Knes	
-	CrewCapacity = 1
+	CrewCapacity = 2
+	
+	INTERNAL
+	{
+		name = STEAM_Hatch_IVA
+	}
 	
     MODULE
     {
