--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Node.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Node.cfg
@@ -84,11 +84,11 @@ PART
 	bulkheadProfiles = size2
 	tags =  Steam Science Knes
 	vesselType = Ship
-	CrewCapacity = 4
+	CrewCapacity = 2
 	
 	INTERNAL
 	{
-		name = crewCabinInternals
+		name = STEAM_Node_IVA
 	}
 
     MODULE
