--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_ScienceLab.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_ScienceLab.cfg
@@ -49,11 +49,11 @@ PART
 	bulkheadProfiles = size2
 	tags =  Steam Science Knes atv
 	vesselType = Ship
-	CrewCapacity = 2
+	CrewCapacity = 4
 	
 	INTERNAL
 	{
-		name = Mobile_Processing_Lab_Int
+		name = STEAM_ScienceLab_IVA
 	}
 	MODULE
 	{
