ATV Techtree review

--- a/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_B.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_B.cfg
@@ -16,7 +16,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 	node_attach = 0, 0, 0.095, 0.0, 0.0, -1.0
-	TechRequired = stability
+	TechRequired = advFlightControl
 	entryCost = 450
 	cost = 50
 	category = Control
