--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
@@ -26,7 +26,7 @@ PART
 	node_stack_bottom = 0.0, -0.5, 0.0, 0, -1, 0, 0	
 	node_attach = 0.0, 0.0, 0.625, 0.0, 0.0, -1.0
 		
-	TechRequired = commandModules
+	TechRequired = start
 	entryCost = 1500
 	cost = 250
 	category = Propulsion
