--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Node.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Node.cfg
@@ -62,7 +62,7 @@ PART
 	node_stack_back = 0, 0, 1.08253, 0, 0, 1, 1
 	node_stack_front = 0, 0,-1.08253, 0, 0, -1, 1		
 		
-	TechRequired = advExploration
+	TechRequired = advConstruction
 	entryCost = 10400
 	cost = 4000
 	category = Utility
