--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Power_Module.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Power_Module.cfg
@@ -26,9 +26,9 @@ PART
 	node_stack_bottom = 0.0, -0.11, 0.0, 0, -1, 0, 1	
 
 		
-	TechRequired = specializedElectrics
-	entryCost = 12200
-	cost = 4500
+	TechRequired = advElectrics
+	entryCost = 1200
+	cost = 500
 	category = Electrical
 	subcategory = 0
 	title = STEAM "Vesta" Power Module. Rechargeable Battery Bank
