--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Flat_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Flat_Adapter.cfg
@@ -51,7 +51,7 @@ PART
 	node_stack_bottom = 0.0, -0.36236, 0.0, 0, -1, 0, 1	
 
 		
-	TechRequired = miniaturization
+	TechRequired = advConstruction
 	entryCost = 1500
 	cost = 550
 	category = Structural
