--- a/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
@@ -16,7 +16,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 	node_attach = 0, 0, 0, 0.0, 0.0, -1.0
-	TechRequired = stability
+	TechRequired = advFlightControl
 	entryCost = 400
 	cost = 35
 	category = Control
