--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Cargo_Tank.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Cargo_Tank.cfg
@@ -26,7 +26,7 @@ PART
 	node_stack_bottom = 0.0, -0.65625, 0.0, 0, -1, 0, 1	
 
 		
-	TechRequired = commandModules
+	TechRequired = advConstruction
 	entryCost = 1500
 	cost = 950
 	category = Propulsion
