--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Hatch.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Hatch.cfg
@@ -26,7 +26,7 @@ PART
 	node_stack_bottom = 0.0, -0.579614, 0.0, 0, -1, 0, 1	
 	node_attach = 0.0, 0.0, 0.625, 0.0, 0.0, -1.0
 		
-	TechRequired = commandModules
+	TechRequired = spaceExploration
 	entryCost = 1500
 	cost = 250
 	category = Utility
