--- a/GameData/Knes/Spaces/ATV_IVA/ATV_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/ATV_IVA.cfg
@@ -17,5 +17,60 @@ INTERNAL
 		seatTransformName = Seat2
 		allowCrewHelmet = false
 	}
-
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = 0.5,-0.872,0.645
+		rotation = 0,-1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = -0.5,-0.872,0.645
+		rotation = 0,-1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,-0.016,-0.851
+		rotation = 0,0.7071068,0.7071068,0
+		scale = 1.3,1.3,1.1
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,0.026,0.85
+		rotation = 0.7071068,0,0,-0.7071068
+		scale = 1.300001,1.3,1.100001
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.002,-0.95,0.625
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = 0.385,-0.946,-0.626
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.188,-0.946,-0.626
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.608,-0.973,-0.618
+		rotation = 0,-0.7179726,0,0.6960713
+		scale = 0.7852786,0.7852786,0.7852786
+	}
 }
