--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_Hatch_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_Hatch_IVA.cfg
@@ -17,5 +17,39 @@ INTERNAL
 		seatTransformName = Seat2
 		allowCrewHelmet = true
 	}
-
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,0,-0.563
+		rotation = 0,0.7071068,0.7071068,0
+		scale = 1.300001,1.3,1.100001
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = 0.4866,-0.0845,-0.184
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,0,0.425
+		rotation = 0.7071068,0,0,-0.7071068
+		scale = 1.300001,1.300001,1.100001
+	}
+	PROP
+	{
+		name = Knes_Monitor
+		position = 0.5054,0.0738,-0.1849
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = pullSwitch
+		position = 0.5085,-0.1146,-0.4331
+		rotation = 0,0,0.7071068,0.7071068
+		scale = 1.5,1.5,1.5
+	}
 }
