--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_Node_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_Node_IVA.cfg
@@ -17,5 +17,88 @@ INTERNAL
 		seatTransformName = Seat2
 		allowCrewHelmet = false
 	}
-
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,0,-0.851
+		rotation = 0,0.7071068,0.7071068,0
+		scale = 1.300003,1.300001,1.100001
+	}
+	PROP
+	{
+		name = Knes_Monitor_SideMount
+		position = 0.902,-0.488,-0.665
+		rotation = 0,0.7071068,0,0.7071068
+		scale = 1.5,1.5,1.5
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,0,0.84
+		rotation = 0.7071068,0,0,-0.7071068
+		scale = 1.300001,1.300001,1.100001
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0.946,0,0
+		rotation = -0.5,0.5,0.5,0.5
+		scale = 1.300001,1.3,1.100001
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = -0.962,0,0
+		rotation = -0.5,-0.5,-0.5,0.5
+		scale = 1.3,1.3,1.1
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,-0.948,0
+		rotation = 0,0,0,1
+		scale = 1.3,1.3,1.1
+	}
+	PROP
+	{
+		name = Hatch_Plane
+		position = 0,0.959,0
+		rotation = 0,0,1,0
+		scale = 1.3,1.3,1.1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.514,-0.697,-0.859
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagA
+		position = -0.136,-0.697,-0.859
+		rotation = 0.5,0.5,0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = 0.5,-0.872,0.645
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Seat_Passenger
+		position = -0.5,-0.872,0.645
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = CargoBagB
+		position = 0.016,-0.683,0.856
+		rotation = 0.02534354,-0.7048419,0.7084631,0.025214
+		scale = 1,1,1
+	}
 }
