--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod_Rescue.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod_Rescue.cfg
@@ -304,13 +304,13 @@ PART
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 30 // TESTING REQUIRED
-		maxAmount = 30 // TESTING REQUIRED
+		amount = 50
+		maxAmount = 50
 	}
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 180 // TESTING REQUIRED
-		maxAmount = 180 // TESTING REQUIRED
+		amount = 150
+		maxAmount = 150
 	}
 }
