--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Pod.cfg
@@ -41,8 +41,8 @@
 	bouyancy = 1.1
 	CoLOffset = 0.0, 0.0, 0.0
 	TechRequired = spaceExploration
-	entryCost = 8000
-	cost = 4000
+	entryCost = 2000
+	cost = 54000
 	category = Pods
 	subcategory = 0
 	title = #autoLOC_MRK_101
@@ -296,13 +296,19 @@
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 30 // TESTING REQUIRED
-		maxAmount = 30 // TESTING REQUIRED
+		amount = 50
+		maxAmount = 50
 	}
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 180 // TESTING REQUIRED
-		maxAmount = 180 // TESTING REQUIRED
+		amount = 180
+		maxAmount = 180
 	}
+	RESOURCE
+	{
+		name = Crystal
+		amount = 0
+		maxAmount = 500
+	}	
 }
