--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -53,14 +53,15 @@ PART
 		
 	TechRequired = advConstruction
 	entryCost = 1500
-	cost = 550
-	category = Structural
+	cost = 1550
+	category = Pods
 	subcategory = 0
 	title = ATV "Lemaitre" Nose Adapter
 	manufacturer = Knes
 	description = A modular structural adapter in various sizes.
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
+	
 
 	// --- Std Parameters ---
 	mass = 0.5
@@ -71,10 +72,90 @@ PART
 	crashTolerance = 10
 	maxTemp = 1500
 	bulkheadProfiles = size2
+	vesselType = Probe	
 	tags =  ATV Knes
 
-	// --- Resources ---
-
+	MODULE
+	{
+		name = ModuleProbeControlPoint
+		minimumCrew = 1
+		multiHop = True
+	}
+	
+	MODULE
+	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.08
+		}
+		hasHibernation = True
+		hibernationMultiplier = 0.00125
+		defaultControlPointDisplayName = #autoLOC_6011003 //#autoLOC_6011003 = Default
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = #autoLOC_6011004 //#autoLOC_6011004 = Reversed
+			orientation = 0,0,180
+		}
+	}
+	
+	MODULE
+	{
+		name = ModuleReactionWheel
+		PitchTorque = 1.5
+		YawTorque = 1.5
+		RollTorque = 1.5
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.15
+		}
+	}
+	MODULE
+	{
+		name = ModuleSAS
+		SASServiceLevel = 3
+	}
+	MODULE
+	{
+		name = ModuleKerbNetAccess
+		MinimumFoV = 5
+		MaximumFoV = 90
+		AnomalyDetection = 0.3
+		DISPLAY_MODES
+		{
+			Mode = Biome,#autoLOC_438890 //#autoLOC_438890 = Biome
+			Mode = Terrain,#autoLOC_438839 //#autoLOC_438839 = Terrain
+		}
+	}
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = .1
+		packetCeiling = 5
+	}		
+	MODULE
+	{
+		name = ModuleScienceContainer
+		
+		reviewActionName = #autoLOC_502201 //#autoLOC_502201 = Review Stored Data
+		storeActionName = #autoLOC_502202 //#autoLOC_502202 = Store Experiments
+		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
+		storageRange = 2.3
+		canBeTransferredToInVessel = True
+		canTransferInVessel = True
+	}	
+	
     MODULE
     {
         name = ModuleColorChanger
