--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
@@ -29,7 +29,7 @@ PART
 	TechRequired = start
 	entryCost = 1500
 	cost = 250
-	category = Propulsion
+	category = Utility
 	subcategory = 0
 	title = Small "MiraGino" Pressurised Module
 	manufacturer = Knes
