A mistake, and a second guess about retrocompatibility.

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -69,7 +69,10 @@
 	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
 	%MODULE[TweakScale]
 	{
-		type = free
+		// type = free
+		// Is should be as above, but I opted to keep backwards compatibility.
+		type = stack
+		defaultScale = 0.625
 	}
 }
 
@@ -405,7 +408,7 @@
 	%MODULE[TweakScale]
 	{
 		type = stack
-		defaultScale = 0.9375
+		defaultScale = 1.875
 	}
 }
 
