--- a/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
+++ b/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
@@ -153,3 +153,28 @@
 		}	
 		
 	}
+	@PART[_Knes_mrk_Cargo]:NEEDS[KIS]
+	{
+		%MODULE[ModuleKISInventory]	
+		{
+			name = ModuleKISInventory
+			maxVolume = 5000
+			externalAccess = true
+			internalAccess = true
+			slotsX = 8
+			slotsY = 5
+			slotSize = 50
+			itemIconResolution = 128
+			selfIconResolution = 128
+			openSndPath = KIS/Sounds/containerOpen
+			closeSndPath = KIS/Sounds/containerClose
+			defaultMoveSndPath = KIS/Sounds/itemMove
+		}
+		
+		%MODULE[ModuleKISItem]
+		{
+			volumeOverride = 4000
+			editorItemsCategory = false
+		}	
+		
+	}
