MRK Cargo / Solaris

--- a/GameData/Knes/Localization/MRK_en-us.cfg
+++ b/GameData/Knes/Localization/MRK_en-us.cfg
@@ -8,9 +8,9 @@ Localization
 				#autoLOC_MRK_100a = Cabin Lights On
 				#autoLOC_MRK_100b = Cabin Lights Off
 				#autoLOC_MRK_101 = Multi-Role Kapsule DM
-                #autoLOC_MRK_102 = This capsule plays a modest host to a crew of four and features a host of integrated RCS thrusters for 'on orbit' transitions. Manufactured as a cheaper alternative to the Kermes this Descent Module is designed to be reuasable (apparently). For best results fly backwards once on orbit.
+                #autoLOC_MRK_102 = This capsule plays a modest host to a crew of four and features a host of integrated RCS thrusters for 'on orbit' transitions. Manufactured as a cheaper alternative to the Kermes this Descent Module is designed to be reusable (apparently).
                 #autoLOC_MRK_103 = Multi-Role Kapsule DM (Recovery)
-                #autoLOC_MRK_104 = the Recovery variant of the Multi-Role Kapsule Dscent Module adds an additional two seats for crew members at the cost of the payload/cargo storage area. Its a bit cozy but it'll get you out of a pinch! For best results fly backwards once on orbit.
+                #autoLOC_MRK_104 = the Recovery variant of the Multi-Role Kapsule Dscent Module adds an additional two seats for crew members at the cost of the payload/cargo storage area. Its a bit cozy but it'll get you out of a pinch!
                 
                 // --- Service Module ---
                 
