New parts Tweakscale patch update

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -494,6 +494,15 @@
 	}
 }
 
+@PART[_Knes_L3S_H22]:NEEDS[TweakScale]:FOR[Knes] // H22 "LadyBee" Fuel Tanks
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
 @PART[_Knes_L3S_H8]:NEEDS[TweakScale]:FOR[Knes] // H8 "Taranis" Fuel Tanks
 {
 	%MODULE[TweakScale]
