--- a/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-MultiRoleKapsule_TweakScale.cfg
@@ -78,6 +78,15 @@
 	}
 }
 
+@PART[_Knes_mrk_Cargo]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Cargo Kapsule DM
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 2.5
+	}
+}
+
 @PART[_Knes_mrk_Pod]:NEEDS[TweakScale]:FOR[Knes] // Multi-Role Kapsule DM
 {
 	%MODULE[TweakScale]
