--- a/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
@@ -112,5 +112,13 @@
 		defaultScale = 2.5
 	}
 }
+@PART[_Knes_STEAM_CrystalLab]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Calypso" ScienceLab Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 2.5
+	}
+}
 
 
