Updating TweakScale to new part and some adjustments

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
@@ -95,6 +95,15 @@
 	}
 }
 
+@PART[_Knes_STEAM_CrystalLab]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Laputa" ScienceLab Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_squared
+		defaultScale = 2.5
+	}
+}
+
 @PART[_Knes_STEAM_Hatch]:NEEDS[TweakScale]:FOR[Knes] // Hatch "Ivalice" Module EVA
 {
 	%MODULE[TweakScale]
