Fairing Fix for 1.10

--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_1875.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_1875.cfg
@@ -57,8 +57,9 @@ PART
 		nSides = 48
 		nArcs = 2
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
-		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
-		
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap
+		DefaultBaseTextureURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base
+		DefaultBaseNormalsURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap		
 		panelGrouping = 3
 		pivot = 0,0.05,0
 		axis = 0,1,0
