--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_375.cfg
@@ -60,8 +60,9 @@ PART
 		nArcs = 2
 		nCollidersPerXSection = 12
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
-		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap		
-		
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
+		DefaultBaseTextureURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base
+		DefaultBaseNormalsURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap		
 		panelGrouping = 3
 		pivot = 0,0.1,0
 		axis = 0,1,0
