--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_09375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_09375.cfg
@@ -59,7 +59,9 @@ PART
 		nCollidersPerXSection = 9
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
 		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap
-
+		DefaultBaseTextureURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base
+		DefaultBaseNormalsURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap
+		
 		panelGrouping = 3
 		pivot = 0,0.05,0
 		axis = 0,1,0
