Add many snacks inside IVA

--- a/GameData/Knes/Spaces/ATV_IVA/ATV_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/ATV_IVA.cfg
@@ -70,7 +70,28 @@ INTERNAL
 	{
 		name = CargoBagA
 		position = -0.608,-0.973,-0.618
-		rotation = 0,-0.7179726,0,0.6960713
+		rotation = 0,-0.7179726,0,0.6960714
 		scale = 0.7852786,0.7852786,0.7852786
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.532,-0.879,-0.223
+		rotation = 0,-0.7071068,0.7071068,0
+		scale = 2,2,2
+	}
+	PROP
+	{
+		name = Knes_Props_snacks
+		position = -0.218,-0.944,0.519
+		rotation = -0.1260341,-0.695784,0.695784,-0.1260341
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.688,-0.879,-0.223
+		rotation = 0,-0.7071068,0.7071068,0
+		scale = 2.000002,2.000001,2.000001
 	}
 }
