--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_CrystalLab_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_CrystalLab_IVA.cfg
@@ -253,4 +253,25 @@ INTERNAL
 		rotation = 0,-0.348842,0,0.9371815
 		scale = 2.000001,1.9,2.000001
 	}
+	PROP
+	{
+		name = Knes_Props_snacks_open
+		position = -0.5811,-0.576,1.805
+		rotation = -0.4193093,-0.5693678,0.5693678,-0.4193092
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks
+		position = 0.059,-0.944,1.724
+		rotation = -0.1235285,-0.6962333,0.6962333,-0.1235285
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.247,-0.912,1.792
+		rotation = 0.4725111,0.5260544,-0.5260543,0.4725112
+		scale = 1,1,1
+	}
 }
