--- a/GameData/Knes/Spaces/ATV_IVA/STEAM_Node_IVA.cfg
+++ b/GameData/Knes/Spaces/ATV_IVA/STEAM_Node_IVA.cfg
@@ -101,4 +101,25 @@ INTERNAL
 		rotation = 0.02534354,-0.7048419,0.7084631,0.025214
 		scale = 1,1,1
 	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.084,-0.915,-0.74
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.6572,-0.914,0.7235
+		rotation = 0.2871269,0.6461875,-0.6461874,0.2871269
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_open
+		position = 0.2929,-0.944,0.695
+		rotation = -0.6202696,-0.3395082,0.3395082,-0.6202694
+		scale = 1,1,1
+	}
 }
