--- a/GameData/Knes/Spaces/Hermes_IVA/Hermes_IVA.cfg
+++ b/GameData/Knes/Spaces/Hermes_IVA/Hermes_IVA.cfg
@@ -32,7 +32,7 @@ INTERNAL
 		name = InternalCameraSwitch
 		colliderTransformName = Rear_collider
 		cameraTransformName = rear
-	}		
+	}
 	MODULE
 	{
 		name = InternalSeat
@@ -310,14 +310,14 @@ INTERNAL
 	{
 		name = Knes_Monitor
 		position = 0.2999,0.2511,-2.2063
-		rotation = 0,0.9973562,-0.07266741,0
+		rotation = 0,0.9973562,-0.07266742,0
 		scale = 0.7734973,0.7734973,0.7734973
 	}
 	PROP
 	{
 		name = Knes_Monitor
 		position = -0.2999,0.2511,-2.2063
-		rotation = 0,0.9973562,-0.07266741,0
+		rotation = 0,0.9973562,-0.07266742,0
 		scale = 0.7735,0.7735,0.7735
 	}
 	PROP
@@ -366,14 +366,14 @@ INTERNAL
 	{
 		name = Knes_Monitor
 		position = -0.6062,0.2201,-2.1148
-		rotation = -0.008697021,-0.6970327,-0.007867134,0.7169434
+		rotation = -0.008697022,-0.6970327,-0.007867135,0.7169434
 		scale = 0.9993904,0.9993906,0.9993906
 	}
 	PROP
 	{
 		name = Knes_Monitor
 		position = -0.6064,0.2192,-1.982
-		rotation = -0.008697021,-0.6970327,-0.007867134,0.7169434
+		rotation = -0.008697022,-0.6970327,-0.007867135,0.7169434
 		scale = 0.9993894,0.9993889,0.9993894
 	}
 	PROP
@@ -499,7 +499,7 @@ INTERNAL
 	{
 		name = Hatch_Plane_Curve90
 		position = 0.619,0.156,-1.157
-		rotation = -0.5270095,0.4714455,0.5270095,0.4714455
+		rotation = -0.5270096,0.4714456,0.5270096,0.4714456
 		scale = 0.8924,0.3661305,0.8924
 	}
 	PROP
@@ -578,5 +578,33 @@ INTERNAL
 		position = -0.581,0.226,-2.227
 		rotation = 0.58704,0.6159107,0.3462244,0.3951794
 		scale = 0.24516,0.16729,0.21197
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.291,-0.23,-1.454
+		rotation = 0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.291,-0.23,-1.53
+		rotation = 0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.291,-0.167,-1.491
+		rotation = 0.5976369,0.3779287,-0.3779287,0.5976369
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_open
+		position = 0.4503,-0.2576,-2.0827
+		rotation = 0.2030189,-0.6773356,0.6773354,0.2030189
+		scale = 1,1,1
 	}
 }
