--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
@@ -111,7 +111,7 @@ INTERNAL
 	{
 		name = AtmosphereDepth
 		position = -0.0543,0.9359,-0.0158
-		rotation = 6.755268E-08,0.7372772,0.6755905,9.68574E-08
+		rotation = 6.755268E-08,0.7372772,0.6755905,9.685738E-08
 		scale = 1.400007,1.400006,1.400005
 	}
 	PROP
@@ -540,5 +540,33 @@ INTERNAL
 		position = -0.1578,0.5192,0.0242
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.7,0.7000001,0.7000001
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.1502,-0.899,0.6483
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.1502,-0.9762,0.6483
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.1685,-0.899,0.6483
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.1685,-0.9762,0.6483
+		rotation = 0,0,-0.7071068,0.7071068
+		scale = 1,1,1
 	}
 }
