--- a/GameData/Knes/Spaces/Pod_StarWatcher_IVA/Knes_Pod_StarRider_IVA.cfg
+++ b/GameData/Knes/Spaces/Pod_StarWatcher_IVA/Knes_Pod_StarRider_IVA.cfg
@@ -361,9 +361,30 @@ INTERNAL
 	}
 	PROP
 	{
+		name = Knes_Props_snacks_open
+		position = 0.253,-0.222,-0.642
+		rotation = 0.5585406,-0.4336272,0.4336271,0.5585405
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.2082,-0.6077,0.356
+		rotation = 0.7071068,0,0,0.7071068
+		scale = 1,1,1
+	}
+	PROP
+	{
 		name = CargoBagA
 		position = 0.38,-0.2601,0.2587
 		rotation = 0,0.7071068,0,0.7071068
 		scale = 0.7098086,0.7098086,0.7098086
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.1057,-0.6077,0.356
+		rotation = 0.6965647,0.1216456,-0.1216456,0.6965647
+		scale = 1,1,1
 	}
 }
