--- a/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
+++ b/GameData/Knes/Spaces/Station_Module_Hab_IVA/Station_Module_Hab_IVA.cfg
@@ -95,4 +95,32 @@ INTERNAL
 		rotation = 0,1,0,0
 		scale = 1,1,1
 	}
+	PROP
+	{
+		name = Knes_Props_snacks_open
+		position = 0.1561,-0.122,-0.0254
+		rotation = 0.6093943,0.3586625,-0.3586624,0.6093941
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.2647,-0.401,-0.8649
+		rotation = 0.5,-0.5,0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks
+		position = 0.309,-0.119,0
+		rotation = 0.08175252,-0.702365,0.7023649,0.08175253
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = 0.2624,-0.401,-0.7631
+		rotation = 0.4320734,-0.5597433,0.5597433,0.4320734
+		scale = 1,1,1
+	}
 }
