--- a/GameData/Knes/Spaces/Crew_Pod_09375_IVA/internal.cfg
+++ b/GameData/Knes/Spaces/Crew_Pod_09375_IVA/internal.cfg
@@ -966,4 +966,25 @@ INTERNAL
 		rotation = -0.5,0.5,-0.5,0.5
 		scale = 1.114208,1.114208,1.114208
 	}
+	PROP
+	{
+		name = Knes_Props_snacks_box
+		position = -0.244,-0.2979,0.2005
+		rotation = -0.2485791,0.653006,-0.5971362,0.3939797
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks
+		position = -0.1912,-0.2486,0.2158
+		rotation = 0.05271417,0.6945081,-0.7172629,0.02033544
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = Knes_Props_snacks_open
+		position = 0.0783,-0.3772,0.1132
+		rotation = -0.1236733,-0.669562,0.5887192,-0.4356621
+		scale = 1,1,1
+	}
 }
