Fixing a leaked rogue patch; Adding support for the two L3S P120 boosters

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -609,6 +609,26 @@
 	}
 }
 
+@PART[_Knes_L3S_P120C]:NEEDS[TweakScale]:FOR[Knes] // P120C "Deimos" Solid Fuel Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_P120E]:NEEDS[TweakScale]:FOR[Knes] // P120E "Phobos" Solid Fuel Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
 @PART[_Knes_L3S_PAP]:NEEDS[TweakScale]:FOR[Knes] // KEREB-D "Pollux" PAP Booster
 {
 	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
