--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_ScienceLab.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_ScienceLab.cfg
@@ -156,7 +156,57 @@ PART
             key = 0 1
         }
     }
-	
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = ScienceRackBioExperiment
+		experimentActionName = Activate Bio instruments
+		resetActionName = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = Collect data
+		interactionRange = 1.2
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = ScienceRackExperiment
+		experimentActionName = Activate Physio instruments
+		resetActionName = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = Collect data
+		interactionRange = 1.2
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}	
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = Color Samples
+		experimentActionName = Check Color Samples
+		resetActionName = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = True
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = Take Data
+		interactionRange = 1.2
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}	
 	// --- Resources ---
 
 	RESOURCE
